--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sudoku generator/solver.",
   "main": "sud.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "keywords": [
     "sudoku",
