updated remote repo name

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "readmeFilename": "README.md",
   "repository": {
     "type": "git",
-    "url": "http://github.com/vyuh/sud.git"
+    "url": "http://github.com/vyuh/sud.js.git"
   }
 }
